--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -2,6 +2,7 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="tipuesearch/css/tipuesearch.css">
 
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
