--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="tipuesearch/css/tipuesearch.css">
+    
+    <form action="search.html">
+    <div class="tipue_search_left"><img src="tipuesearch/search.png" class="tipue_search_icon"></div>
+    <div class="tipue_search_right"><input type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="At least 3 characters" required></div>
+    <div style="clear: both;"></div>
+    </form>
 
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
